# lvgl_sdl_simulator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
app/awe/aweui/: CMakeLists.txt  aweui_event.c  aweui_event.h  aweui_event_inc.h  aweui_resources.h  aweui_types.h  ui.c  ui.h
app/awe/aweui/assets/: anim_circle.c  anim_loading.c  anim_speak.c  btn_camera_active.c  btn_camera_l_active.c  btn_cross.c  btn_flipcamera.c  btn_takephoto_48.c  btn_takephoto_56.c  btn_tick_48 copy.c  btn_tick_56.c  btn_voice_active.c  btn_withdraw.c  ic_brightness_high.c  ic_brightness_low.c  ic_cross.c  ic_filpcamera.c  ic_launch_camera.c  ic_launch_setting.c  ic_launch_voice.c  ic_nav_home.c  ic_radio_off.c  ic_radio_on.c  ic_status_wifi0.c  ic_status_wifi1.c  ic_tick.c  ic_volumn_high.c  ic_volumn_low.c  ic_warning.c  ic_withdraw.c  icon_music.c  wifi_tool_qrcode.c  xiaoling_standby_s.c
app/awe/aweui/screen/: aweui_chat_btn_group.c  aweui_chat_btn_group.h  aweui_screen.h  aweui_screen_bar_setting.c  aweui_screen_camera.c  aweui_screen_camera.h  aweui_screen_llm_chat.c  aweui_screen_llm_chat.h  aweui_screen_network.c  aweui_screen_network.h  aweui_screen_standby.c  aweui_status_bar.c  aweui_status_bar.h  screen_switch.c  screen_switch.h
app/awe/aweui/theme/: lv_theme_ultra_marine.c  lv_theme_ultra_marine.h
app/awe/aweui/utils/: img_utils.c  img_utils.h  lv_img_utils.c  lv_img_utils.h
app/awe/aweui/widgets/: floating_button.c  llm_dialog.c  llm_dialog.h  ls_lv_tabview.c  ls_lv_tabview.h  ls_status_bar.c  ls_status_bar.h  radio_button.c  radio_button.h  radio_group.c  radio_group.h
app/example/benchmark/: CMakeLists.txt  lv_demo_benchmark.c  lv_demo_benchmark.h
app/example/benchmark/assets/: img_benchmark_cogwheel_alpha16.c  img_benchmark_cogwheel_argb.c  img_benchmark_cogwheel_chroma_keyed.c  img_benchmark_cogwheel_indexed16.c  img_benchmark_cogwheel_rgb.c  img_benchmark_cogwheel_rgb565a8.c  lv_font_bechmark_montserrat_12_compr_az.c.c  lv_font_bechmark_montserrat_16_compr_az.c.c  lv_font_bechmark_montserrat_28_compr_az.c.c
app/launcher/: CMakeLists.txt  lv_port_file.c  lv_port_indev.c  main.c  main.h  ui.c  ui.h  ui_btnmatrix.c  ui_btnmatrix.h  ui_common.c  ui_common.h  ui_resource.h
app/launcher/home/: home_ui.c  home_ui.h
app/launcher/intercom_homepage/: ui_intercom_homepage.c
app/launcher/intercom_homepage/intercom_call/: ui_intercom_call.c
app/launcher/intercom_homepage/video_monitor/: ui_monitor.c
app/launcher/launcher/: app_launcher.c  app_launcher.h
app/launcher/setting/: about_ui.c  bt_ui.c  language_and_date_ui.c  setting_ui.c  wallpaper_ui.c  wifi_ui.c  wifi_ui.h
app/launcher/smart_home/: control_ui.c  control_ui.h  info_ui.c  info_ui.h  music_ui.c  music_ui.h  smart_home_ui.c
app/launcher/ui/: CMakeLists.txt  ui.c  ui.h
app/launcher/ui/assets/: lv_font_chinese_18.c
app/launcher/ui/launcher/: app_launcher.c  app_launcher.h
app/launcher/ui/utils/: img_utils.c  img_utils.h
app/launcher/widgets/: app_icon.c  app_icon.h
app/lv_demo_100ask/: CMakeLists.txt  lv_100ask.h  lv_100ask.mk  main.c
app/lv_demo_100ask/src/lv_100ask_board_about/: CMakeLists.txt  lv_100ask_board_about.h
app/lv_demo_100ask/src/lv_100ask_boot_animation/: lv_100ask_boot_animation.c  lv_100ask_boot_animation.h
app/lv_demo_100ask/src/lv_100ask_demo/: lv_100ask_demo.c  lv_100ask_demo.h
app/lv_demo_100ask/src/lv_100ask_game_2048/: lv_100ask_game_2048.c  lv_100ask_game_2048.h
app/lv_demo_100ask/src/lv_100ask_game_snake/: lv_100ask_game_snake.h
app/lv_demo_100ask/src/lv_100ask_tool_calc/: lv_100ask_tool_calc.c  lv_100ask_tool_calc.h
app/lv_demo_100ask/src/lv_100ask_tool_clock/: lv_100ask_tool_clock.c  lv_100ask_tool_clock.h
app/lv_demo_100ask/src/lv_100ask_tool_qrcode/: lv_100ask_tool_qrcode.c  lv_100ask_tool_qrcode.h
app/lv_demo_100ask/src/lv_100ask_tool_regbit/: lv_100ask_tool_regbit.c  lv_100ask_tool_regbit.h
app/lv_demo_100ask/src/lv_100ask_tool_settings/: lv_100ask_tool_settings.h
app/lv_demo_100ask/ui/: CMakeLists.txt  lv_100ask.h
app/lv_demo_100ask/ui/lv_100ask_board_about/: lv_100ask_board_about.c  lv_100ask_board_about.h
app/lv_demo_100ask/ui/lv_100ask_demo/: lv_100ask_demo.h
app/pendict/: CMakeLists.txt  main.c
app/pendict/ui/: CMakeLists.txt  img_arcs_demo_widgets_avatar.c  lisaui_apps.ld  lv_arcs_demo.c  ui.c  ui.h  ui_events.h  ui_font_PocketDictPenRegular.c  ui_helpers.c  ui_helpers.h
app/physics_demo/: CMakeLists.txt  lv_demo_physics.c  main.c  ui.c  ui.h
app/physics_demo/components/: ui_comp_bar_group.c  ui_comp_dot.c  ui_comp_text_bg_group.c
app/physics_demo/fonts/: ui_font_Subtitle.c
app/physics_demo/images/: ui_img_anim_printer_in_05_png.c  ui_img_anim_printer_in_08_png.c  ui_img_arrow_png.c  ui_img_btn2_png.c  ui_img_icn_filament_png.c  ui_img_nozzle_png.c  ui_img_step2_bg_png.c  ui_img_text_bg_center_png.c
app/physics_demo/ui/: ui_helpers.h
app/printer/: CMakeLists.txt  main.c
app/printer/ui/: CMakeLists.txt
app/ui/: CMakeLists.txt  img_lvgl_logo.c  lv_demo_physics.c  lv_demo_physics.h  lv_physac.h  ui_events.h  ui_helpers.c
app/ui/components/: ui_comp.c  ui_comp_bar_group.h  ui_comp_button_menu.h  ui_comp_button_print.h  ui_comp_dot.h  ui_comp_hook.h  ui_comp_list.h  ui_comp_text_bg_group.h
app/ui/fonts/: ui_font_H1.c  ui_font_Title.c
app/ui/images/: ui_img_anim_printer_in_04_png.c  ui_img_anim_printer_in_06_png.c  ui_img_anim_printer_in_10_png.c  ui_img_anim_printer_in_11_png.c  ui_img_bed_png.c  ui_img_btn1_png.c  ui_img_btn1_press_png.c  ui_img_btn2_press_png.c  ui_img_btn3_press_png.c  ui_img_headtemp_png.c  ui_img_icn_back_png.c  ui_img_icn_disable_png.c  ui_img_icn_home_png.c  ui_img_icn_move_png.c  ui_img_icn_settings_png.c  ui_img_ok_big_png.c  ui_img_print_bar1_png.c  ui_img_print_bar2_png.c  ui_img_separetor2_png.c  ui_img_separetor_png.c  ui_img_step3_bg_png.c
app/ui/screens/: ui_final.c  ui_main_menu.c  ui_printing.c  ui_step1.c  ui_step2.c  ui_step3.c  ui_welcome.c
app/widget/ui/: CMakeLists.txt  lv_arcs_demo.c  lv_demo_widgets.c  lv_demo_widgets.h
app/x-ui/ui/: CMakeLists.txt  ui.c  ui.h
(+174 files in other folders)
