SET(SOURCES components/ui_comp_button.c
    components/ui_comp_bar_group.c
    components/ui_comp_button_menu.c
    components/ui_comp_button_print.c
    components/ui_comp_dot.c
    components/ui_comp_list.c
    components/ui_comp_text_bg_group.c
    components/ui_comp.c
    screens/ui_welcome.c
    screens/ui_step1.c
    screens/ui_step2.c
    screens/ui_step3.c
    screens/ui_final.c
    screens/ui_main_menu.c
    screens/ui_printing.c
    screens/ui_settings.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_bg1_png.c
    images/ui_img_anim_printer_in_01_png.c
    images/ui_img_btn1_png.c
    images/ui_img_btn1_press_png.c
    images/ui_img_ok_small_png.c
    images/ui_img_text_bg_left_png.c
    images/ui_img_text_bg_center_png.c
    images/ui_img_text_bg_right_png.c
    images/ui_img_separetor_png.c
    images/ui_img_step2_bg_png.c
    images/ui_img_bed_png.c
    images/ui_img_nozzle_png.c
    images/ui_img_step3_bg_png.c
    images/ui_img_arrow_png.c
    images/ui_img_print_ready_png.c
    images/ui_img_ok_big_png.c
    images/ui_img_bg2_png.c
    images/ui_img_btn2_png.c
    images/ui_img_btn2_press_png.c
    images/ui_img_icn_print_png.c
    images/ui_img_icn_settings_png.c
    images/ui_img_icn_control_png.c
    images/ui_img_separetor2_png.c
    images/ui_img_print_bar1_png.c
    images/ui_img_print_bar2_png.c
    images/ui_img_headtemp_png.c
    images/ui_img_bedtemp_png.c
    images/ui_img_btn3_png.c
    images/ui_img_btn3_press_png.c
    images/ui_img_bg_settings_png.c
    images/ui_img_icn_back_png.c
    images/ui_img_icn_move_png.c
    images/ui_img_icn_disable_png.c
    images/ui_img_icn_home_png.c
    images/ui_img_icn_zoffset_png.c
    images/ui_img_icn_filament_png.c
    images/ui_img_anim_printer_in_02_png.c
    images/ui_img_anim_printer_in_03_png.c
    images/ui_img_anim_printer_in_04_png.c
    images/ui_img_anim_printer_in_05_png.c
    images/ui_img_anim_printer_in_06_png.c
    images/ui_img_anim_printer_in_07_png.c
    images/ui_img_anim_printer_in_08_png.c
    images/ui_img_anim_printer_in_09_png.c
    images/ui_img_anim_printer_in_10_png.c
    images/ui_img_anim_printer_in_11_png.c
    fonts/ui_font_H1.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c)

add_library(ui ${SOURCES})
