SET(SOURCES
    lv_100ask_board_about/lv_100ask_board_about.c
    lv_100ask_boot_animation/assets/img_lv_100ask_demo_logo.c
    lv_100ask_demo/assets/img_lv_100ask_bg.c
    lv_100ask_demo/assets/img_lv_100ask_icon_2048.c
    lv_100ask_demo/assets/img_lv_100ask_icon_about_us.c
    lv_100ask_demo/assets/img_lv_100ask_icon_calc.c
    lv_100ask_demo/assets/img_lv_100ask_icon_camera.c
    lv_100ask_demo/assets/img_lv_100ask_icon_data.c
    lv_100ask_demo/assets/img_lv_100ask_icon_floder.c
    lv_100ask_demo/assets/img_lv_100ask_icon_humiture.c
    lv_100ask_demo/assets/img_lv_100ask_icon_music.c
    lv_100ask_demo/assets/img_lv_100ask_icon_QRcode.c
    lv_100ask_demo/assets/img_lv_100ask_icon_regbit.c
    lv_100ask_demo/assets/img_lv_100ask_icon_setting.c
    lv_100ask_demo/assets/img_lv_100ask_icon_snake.c
    lv_100ask_demo/assets/img_lv_100ask_icon_tetris.c
    lv_100ask_demo/assets/img_lv_100ask_icon_widgets.c
    lv_100ask_demo/lv_100ask_demo.c
    lv_100ask_game_2048/lv_100ask_game_2048.c
    lv_100ask_game_snake/lv_100ask_game_snake.c
    lv_100ask_tool_calc/lv_100ask_tool_calc.c
    lv_100ask_tool_clock/assets/img_hand.c
    lv_100ask_tool_clock/lv_100ask_tool_clock.c
    lv_100ask_tool_qrcode/lv_100ask_tool_qrcode.c
    lv_100ask_tool_regbit/lv_100ask_tool_regbit.c
    lv_100ask_tool_settings/lv_100ask_tool_settings.c
    lv_100ask_boot_animation/lv_100ask_boot_animation.c
    )
include_directories(
    lv_100ask_board_about/lv_100ask_board_about.h
    lv_100ask_demo/assets/lv_100ask_demo.h
    lv_100ask_game_2048/lv_100ask_game_2048.h
    lv_100ask_game_snake/lv_100ask_game_snake.h
    lv_100ask_tool_calc/lv_100ask_tool_calc.h
    lv_100ask_tool_clock/lv_100ask_tool_clock.h
    lv_100ask_tool_qrcode/lv_100ask_tool_qrcode.h
    lv_100ask_tool_regbit/lv_100ask_tool_regbit.h
    lv_100ask_tool_settings/lv_100ask_tool_settings.h
    )
add_library(ui ${SOURCES})
