SET(SOURCES 
    "ui.c"
    "controller/dialplate_controller.c"
    "ui_page_manager.c"
    "resource/resource_pool.c"
    "page/dialplate/dialplate.c"
    "page/dialplate/dialplate_view.c"
    "page/start_up/start_up.c"
    "page/start_up/start_up_view.c"
    "page/status_bar/status_bar.c"
    "app_page_factory.c"

    "resource/font/font_agencyb_36.c"
    "resource/font/font_bahnschrift_13.c"
    "resource/font/font_bahnschrift_17.c"
    "resource/font/font_bahnschrift_32.c"
    "resource/font/font_bahnschrift_65.c"

    "resource/img/img_src_alarm.c"
    "resource/img/img_src_battery.c"
    "resource/img/img_src_battery_info.c"
    "resource/img/img_src_bicycle.c"
    "resource/img/img_src_compass.c"
    "resource/img/img_src_gps_arrow_dark.c"
    "resource/img/img_src_gps_arrow_default.c"
    "resource/img/img_src_gps_arrow_light.c"
    "resource/img/img_src_gps_pin.c"
    "resource/img/img_src_gyroscope.c"
    "resource/img/img_src_locate.c"
    "resource/img/img_src_map_location.c"
    "resource/img/img_src_menu.c"
    "resource/img/img_src_origin_point.c"
    "resource/img/img_src_pause.c"
    "resource/img/img_src_satellite.c"
    "resource/img/img_src_sd_card.c"
    "resource/img/img_src_start.c"
    "resource/img/img_src_stop.c"
    "resource/img/img_src_storage.c"
    "resource/img/img_src_system_info.c"
    "resource/img/img_src_time_info.c"
    "resource/img/img_src_trip.c"
    )

add_library(ui ${SOURCES})
